formulaire mail couleur police en noir
formulaire mail couleur police en noir

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -333,11 +333,13 @@ h3 {
 .field-mail {
     width: 70%;
     float: left;
+    color: #000;
 }
 
 .field-message {
     width: 100%;
     min-height: 100px;
+    color: #000;
 }
 
 .btn-envoyer {
