--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -43,9 +43,10 @@ border-bottom: 3px solid white;
 }
 
 p.intro-text {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 20px;
-    letter-spacing: -1px;
+     font-weight: 400;
+    /*letter-spacing: -1px;*/
     text-align: center;
     color: #ffffff;
     margin-top: 20px;
@@ -73,7 +74,7 @@ p.intro-text {
 
 .txt-nous-soutenir {
     /* font-family: "Microsoft Tai Le" !important;*/
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -82,7 +83,7 @@ p.intro-text {
 
 .txt-nous-soutenir-small {
    /* font-family: "Microsoft Tai Le" !important;*/
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 13px;
     font-weight: 400;
     text-align: center;
@@ -99,20 +100,21 @@ p.reduction-dimpots {
 /*ENDOF full widht banner end of home page*/
 
 p {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 20px;
+    font-weight: 300;
     object-fit: contain;
-    letter-spacing: -0.83px;
+    /*letter-spacing: -0.00px;*/
     text-align: left;
     color: #ffffff;
     padding-top: 5px;
 }
 
 span.etplus {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 14px;
     object-fit: contain;
-    letter-spacing: -0.83px;
+    /*letter-spacing: -0.83px;*/
     color: #ffffff;
 }
 
@@ -122,7 +124,7 @@ span.etplus {
 .date-date,
 .date-lieu,
 .date-infos-carte {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 14px;
     color: #000;
 }
@@ -133,20 +135,20 @@ span.etplus {
 
 .date-jour {
     margin-top: 12px;
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 24px;
     color: #000;
     font-weight: 600;
-    letter-spacing: -1px;
+    letter-spacing: -0.6px;
     text-align: center;
 }
 
 .date-mois {
     ;
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 14px;
     font-weight: 600;
-    letter-spacing: -0.6px;
+    letter-spacing: -0.3px;
     color: #f83131;
     text-align: center;
 }
@@ -181,10 +183,10 @@ ul.production li {
 }
 
 ul.production {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 18px;
     object-fit: contain;
-    letter-spacing: -0.83px;
+    /*letter-spacing: -0.83px;*/
     text-align: justify;
     color: #ffffff;
     padding-top: 0px;
@@ -303,17 +305,17 @@ p a:visited {
 }
 
 h1 {
-    font-family: 'Muli', sans-serif !important;
-    font-size: 26px;
-    letter-spacing: -0.83px;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 36px;
+  /*letter-spacing: -0.83px;*/
     font-weight: 600;
-    color: #eee;
+    color: #fff;
     text-align: left;
     padding-top: 40px;
 }
 
 h2 {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 24px;
     font-weight: 600;
     color: #eee;
@@ -322,7 +324,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 20px;
     font-weight: 600;
     color: #eee;
@@ -350,7 +352,7 @@ h3 {
     color: #fff;
     /*
     font-family: "Microsoft Tai Le" !important;*/
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
 
     font-size: 14px;
     text-decoration: none;
@@ -401,9 +403,9 @@ min-height: 100%;
         height: 40%;
     }
     p.intro-text {
-        font-family: 'Muli', sans-serif !important;
+        font-family: 'Open Sans', sans-serif !important;
         font-size: 20px;
-        letter-spacing: -1px;
+        /*letter-spacing: -1px;*/
         text-align: center;
         color: #ffffff;
         margin-top: 10px;
@@ -417,7 +419,7 @@ min-height: 100%;
     }
     p {
         font-size: 16px;
-        letter-spacing: -0.6px;
+        /*letter-spacing: -0.6px;*/
     }
     p.date {
         text-align: center;
@@ -523,7 +525,7 @@ min-height: 100%;
         /*Fixes the width of all elements*/
         padding-left: 0px;
         padding-right: 0px;
-         font-family: 'Muli', sans-serif !important;
+         font-family: 'Open Sans', sans-serif !important;
         /*font-family: "Microsoft Tai Le" !important;*/
         font-size: 18px;
         text-align: center;
@@ -859,7 +861,7 @@ address {
     margin: 0;
     padding: 7px 20px 6px 20px;
     color: #fff;
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     font-size: 12px;
     font-weight: 500;
     text-decoration: none;
