--- a/css/scrolling-nav2.css
+++ b/css/scrolling-nav2.css
@@ -516,22 +516,12 @@ min-height: 100%;
 /*Large devices (desktops, 992px and up)
 or Extra large devices (large desktops, 1200px and up)*/
 @media(min-width:992px) {
-    .navbar,
-    .navbar-inverse,
-    .navbar-fixed-top {
-        background-color: rgba(0, 0, 0, 0.85);
-        border: none;
-    }
 
     .navbar, .navbar-dark
     .fixed-top {
         background-color: rgba(0, 0, 0, 0.85);
         border: none;
     }
-
-    .navbar .nav > li > a {
-        color: white;
-    } 
 
     .navbar-nav > li.nav-item > a.nav-link {
         color: white;
@@ -545,18 +535,7 @@ or Extra large devices (large desktops, 1200px and up)*/
     .top-nav-collapse {
         padding: 0;
     }
-    .nav li {
-        float: left;
-        width: 151px;
-        /Fixes the width of all elements/
-        padding-left: 0px;
-        padding-right: 0px;
-         font-family: 'Open Sans', sans-serif !important;
-        /font-family: "Microsoft Tai Le" !important;/
-        font-size: 18px;
-        text-align: center;
-        color: #ffffff;
-    }
+   
     .navbar-nav > li.nav-item {
         float: left;
         width: 151px;
@@ -569,18 +548,12 @@ or Extra large devices (large desktops, 1200px and up)*/
         text-align: center;
         color: #ffffff;
     }
-    .nav li.dropdown a:hover {
-        border-bottom: none;
-    }
+ 
     .navbar-nav > li.dropdown > a.nav-link:hover {
         border-bottom: none;
     }
 
-    .nav li a:link {
-        display: block;
-        width: 100%;
-    }
-
+   
     .navbar-nav > li.dropdown > a.nav-link:link {
         display: block;
         width: 100%;
@@ -590,16 +563,8 @@ or Extra large devices (large desktops, 1200px and up)*/
         border-bottom: 3px solid #fafafa;
     }
 
-    .navbar-nav > li.dropdown > a.nav-link:hover {
+    .navbar-nav > li.nav-item > a.nav-link:hover {
         border-bottom: 3px solid #fafafa;
-    }
-
-    .navbar-inverse .navbar-nav > .active {
-        border-bottom: 3px solid white;
-    }
-
-    .navbar-nav > .active {
-        border-bottom: 3px solid white;
     }
     
     .navbar-nav > .nav-item .active {
