--- a/css/scrolling-nav2.css
+++ b/css/scrolling-nav2.css
@@ -14,6 +14,7 @@
 body {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 html {
@@ -28,6 +29,7 @@ border-bottom: 3px solid white;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover{}*/
+
 
 .navbar-brand img#logo {
     max-height: 140px;
@@ -65,26 +67,13 @@ p.intro-text {
     word-wrap: break-word;
 }
 
-.btn-nous-soutenir {
-    width: 200px;
-    height: 50px;
-    border: none;
-    border-radius: 2px;
-    background-color: rgba(255, 255, 255, 0.95);
-    padding-top: 5px;
+.btn-light {
+    min-width: 180px;
     margin-top: 66px;
-    color: #000000;
 }
 
-.btn-nous-soutenir:hover {
-    border-radius: 3px;
-    background-color: rgba(255, 255, 255, 1);
-    padding-top: 5px;
-    margin-top: 66px;
-    color: #000;
-}
 
-.txt-nous-soutenir {
+span.txt-nous-soutenir {
     /* font-family: "Microsoft Tai Le" !important;*/
     font-family: 'Open Sans', sans-serif !important;
     font-size: 20px;
@@ -93,7 +82,7 @@ p.intro-text {
     line-height: 90%;
 }
 
-.txt-nous-soutenir-small {
+span.txt-nous-soutenir-small {
    /* font-family: "Microsoft Tai Le" !important;*/
     font-family: 'Open Sans', sans-serif !important;
     font-size: 13px;
@@ -290,14 +279,15 @@ span.name-autres {
 }
 
 .logo-partner {
-    height: auto;
     max-width: 100px;
     padding-top: 20px;
 }
 
 .caption-partenaire {
     font-size: 14px;
-    word-wrap: break-word; width: 120px;
+    word-wrap: break-word; 
+    max-width: 120px;
+
 }
 
 p a {
@@ -424,13 +414,10 @@ min-height: 100%;
         color: #ffffff;
         margin-top: 10px;
     }
-    .btn-nous-soutenir {
-        width: 190px;
-        margin-top: 5px;
+    .btn-light {
+        width: 180px;
     }
-    .btn-nous-soutenir:hover {
-        margin-top: 5px;
-    }
+
     p {
         font-size: 16px;
         /*letter-spacing: -0.6px;*/
