--- a/css/blueimp-gallery.css
+++ b/css/blueimp-gallery.css
@@ -17,7 +17,13 @@
   right: 0;
   bottom: 0;
   left: 0;
+  -webkit-transition: opacity 0.2s linear;
+  -moz-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
   /* Prevent artifacts in Mozilla Firefox: */
+  backface-visibility: hidden;
   -moz-backface-visibility: hidden;
 }
 .blueimp-gallery > .slides > .slide > .slide-content {
@@ -33,12 +39,11 @@
   z-index: 999999;
   overflow: hidden;
   background: #000;
-  background: rgba(0, 0, 0, 0.9);
   opacity: 0;
   display: none;
   direction: ltr;
-  -ms-touch-action: none;
-  touch-action: none;
+  -ms-touch-action: pinch-zoom;
+  touch-action: pinch-zoom;
 }
 .blueimp-gallery-carousel {
   position: relative;
@@ -46,9 +51,9 @@
   margin: 1em auto;
   /* Set the carousel width/height ratio to 16/9: */
   padding-bottom: 56.25%;
-  box-shadow: 0 0 10px #000;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  -ms-touch-action: pan-y pinch-zoom;
+  touch-action: pan-y pinch-zoom;
 }
 .blueimp-gallery-display {
   display: block;
@@ -67,19 +72,11 @@
   float: left;
   height: 100%;
   text-align: center;
-  -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
-     -moz-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
-      -ms-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
-       -o-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
-          transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000);
-}
-.blueimp-gallery,
-.blueimp-gallery > .slides > .slide > .slide-content {
-  -webkit-transition: opacity 0.2s linear;
-     -moz-transition: opacity 0.2s linear;
-      -ms-transition: opacity 0.2s linear;
-       -o-transition: opacity 0.2s linear;
-          transition: opacity 0.2s linear;
+  -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  -moz-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  -ms-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .blueimp-gallery > .slides > .slide-loading {
   background: url(../img/loading.gif) center no-repeat;
@@ -102,7 +99,7 @@
   width: 40px;
   height: 40px;
   margin-top: -23px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 60px;
   font-weight: 100;
   line-height: 30px;
@@ -113,12 +110,12 @@
   background: #222;
   background: rgba(0, 0, 0, 0.5);
   -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
   border: 3px solid #fff;
   -webkit-border-radius: 23px;
-     -moz-border-radius: 23px;
-          border-radius: 23px;
+  -moz-border-radius: 23px;
+  border-radius: 23px;
   opacity: 0.5;
   cursor: pointer;
   display: none;
@@ -163,14 +160,6 @@
 .blueimp-gallery-playing > .play-pause {
   background-position: -15px 0;
 }
-.blueimp-gallery > .prev:hover,
-.blueimp-gallery > .next:hover,
-.blueimp-gallery > .close:hover,
-.blueimp-gallery > .title:hover,
-.blueimp-gallery > .play-pause:hover {
-  color: #fff;
-  opacity: 1;
-}
 .blueimp-gallery-controls > .prev,
 .blueimp-gallery-controls > .next,
 .blueimp-gallery-controls > .close,
@@ -179,10 +168,10 @@
   display: block;
   /* Fix z-index issues (controls behind slide element) on Android: */
   -webkit-transform: translateZ(0);
-     -moz-transform: translateZ(0);
-      -ms-transform: translateZ(0);
-       -o-transform: translateZ(0);
-          transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
 }
 .blueimp-gallery-single > .prev,
 .blueimp-gallery-left > .prev,
@@ -197,10 +186,18 @@
 .blueimp-gallery > .close,
 .blueimp-gallery > .play-pause {
   -webkit-user-select: none;
-   -khtml-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.blueimp-gallery > .prev:hover,
+.blueimp-gallery > .next:hover,
+.blueimp-gallery > .close:hover,
+.blueimp-gallery > .title:hover,
+.blueimp-gallery > .play-pause:hover {
+  color: #fff;
+  opacity: 1;
 }
 
 /* Replace PNGs with SVGs for capable browsers (excluding IE<9) */
@@ -218,9 +215,15 @@ body:last-child .blueimp-gallery-playing > .play-pause {
 }
 
 /* IE7 fixes */
-*+html .blueimp-gallery > .slides > .slide {
+* + html .blueimp-gallery > .slides > .slide {
   min-height: 300px;
 }
-*+html .blueimp-gallery > .slides > .slide > .slide-content {
+* + html .blueimp-gallery > .slides > .slide > .slide-content {
   position: relative;
+}
+
+@media (prefers-color-scheme: light) {
+  .blueimp-gallery-carousel {
+    background: #fff;
+  }
 }
