--- a/css/_old/blueimp-gallery.css
+++ b/css/_old/blueimp-gallery.css
@@ -11,8 +11,7 @@
  */
 
 .blueimp-gallery,
-.blueimp-gallery > .slides > .slide > .slide-content,
-.blueimp-gallery > .slides > .slide > .slide-content > img {
+.blueimp-gallery > .slides > .slide > .slide-content {
   position: absolute;
   top: 0;
   right: 0;
@@ -27,8 +26,7 @@
   backface-visibility: hidden;
   -moz-backface-visibility: hidden;
 }
-.blueimp-gallery > .slides > .slide > .slide-content,
-.blueimp-gallery > .slides > .slide > .slide-content > img {
+.blueimp-gallery > .slides > .slide > .slide-content {
   margin: auto;
   width: auto;
   height: auto;
@@ -56,7 +54,6 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   -ms-touch-action: pan-y pinch-zoom;
   touch-action: pan-y pinch-zoom;
-  display: block;
 }
 .blueimp-gallery-display {
   display: block;
@@ -71,7 +68,6 @@
   position: absolute;
 }
 .blueimp-gallery > .slides > .slide {
-  visibility: hidden;
   position: relative;
   float: left;
   height: 100%;
@@ -82,17 +78,9 @@
   -o-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
   transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-.blueimp-gallery > .slides > .slide-prev,
-.blueimp-gallery > .slides > .slide-active,
-.blueimp-gallery > .slides > .slide-next {
-  visibility: visible;
-}
 .blueimp-gallery > .slides > .slide-loading {
   background: url(../img/loading.gif) center no-repeat;
   background-size: 64px 64px;
-}
-.blueimp-gallery-smil > .slides > .slide-loading {
-  background-image: url(../img/loading.svg);
 }
 .blueimp-gallery > .slides > .slide-loading > .slide-content {
   opacity: 0;
@@ -100,64 +88,48 @@
 .blueimp-gallery > .slides > .slide-error {
   background: url(../img/error.png) center no-repeat;
 }
-.blueimp-gallery-svgasimg > .slides > .slide-error {
-  background-image: url(../img/error.svg);
-}
 .blueimp-gallery > .slides > .slide-error > .slide-content {
   display: none;
 }
-.blueimp-gallery-display > .prev,
-.blueimp-gallery-display > .next {
+.blueimp-gallery > .prev,
+.blueimp-gallery > .next {
   position: absolute;
   top: 50%;
   left: 15px;
-  width: 8px;
-  height: 20px;
-  padding: 10px 14px 10px 18px;
+  width: 40px;
+  height: 40px;
   margin-top: -23px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 30px;
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 0 2px #000;
+  text-align: center;
+  background: #222;
+  background: rgba(0, 0, 0, 0.5);
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  background: #222 url(../img/prev.png) center no-repeat;
-  background-color: rgba(0, 0, 0, 0.5);
   border: 3px solid #fff;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
+  -webkit-border-radius: 23px;
+  -moz-border-radius: 23px;
+  border-radius: 23px;
   opacity: 0.5;
   cursor: pointer;
   display: none;
 }
-.blueimp-gallery-display > .next {
-  right: 15px;
+.blueimp-gallery > .next {
   left: auto;
-  background-image: url(../img/next.png);
-}
-.blueimp-gallery-svgasimg > .prev {
-  background-image: url(../img/prev.svg);
-}
-.blueimp-gallery-svgasimg > .next {
-  background-image: url(../img/next.svg);
-}
-.blueimp-gallery-display > .close {
-  position: absolute;
-  top: 15px;
   right: 15px;
-  width: 30px;
-  height: 30px;
-  background: url(../img/close.png) center no-repeat;
-  opacity: 0.8;
-  cursor: pointer;
-  display: none;
 }
-.blueimp-gallery-svgasimg > .close {
-  background-image: url(../img/close.svg);
-}
+.blueimp-gallery > .close,
 .blueimp-gallery > .title {
   position: absolute;
   top: 15px;
   left: 15px;
-  margin: 0 60px 0 0;
+  margin: 0 40px 0 0;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
@@ -165,22 +137,28 @@
   opacity: 0.8;
   display: none;
 }
-.blueimp-gallery-display > .play-pause {
+.blueimp-gallery > .close {
+  padding: 15px;
+  right: 15px;
+  left: auto;
+  margin: -15px;
+  font-size: 30px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.blueimp-gallery > .play-pause {
   position: absolute;
   right: 15px;
   bottom: 15px;
-  width: 30px;
-  height: 30px;
+  width: 15px;
+  height: 15px;
   background: url(../img/play-pause.png) 0 0 no-repeat;
   cursor: pointer;
   opacity: 0.5;
   display: none;
 }
-.blueimp-gallery-svgasimg > .play-pause {
-  background-image: url(../img/play-pause.svg);
-}
 .blueimp-gallery-playing > .play-pause {
-  background-position: -30px 0;
+  background-position: -15px 0;
 }
 .blueimp-gallery-controls > .prev,
 .blueimp-gallery-controls > .next,
@@ -222,24 +200,26 @@
   opacity: 1;
 }
 
+/* Replace PNGs with SVGs for capable browsers (excluding IE<9) */
+body:last-child .blueimp-gallery > .slides > .slide-error {
+  background-image: url(../img/error.svg);
+}
+body:last-child .blueimp-gallery > .play-pause {
+  width: 20px;
+  height: 20px;
+  background-size: 40px 20px;
+  background-image: url(../img/play-pause.svg);
+}
+body:last-child .blueimp-gallery-playing > .play-pause {
+  background-position: -20px 0;
+}
+
 /* IE7 fixes */
 * + html .blueimp-gallery > .slides > .slide {
   min-height: 300px;
 }
 * + html .blueimp-gallery > .slides > .slide > .slide-content {
   position: relative;
-}
-* + html .blueimp-gallery > .slides > .slide > .slide-content > img {
-  position: relative;
-}
-
-@supports (object-fit: contain) {
-  .blueimp-gallery-contain > .slides > .slide > .slide-content,
-  .blueimp-gallery-contain > .slides > .slide > .slide-content > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
 }
 
 @media (prefers-color-scheme: light) {
