--- a/css/blueimp-gallery-video.css
+++ b/css/blueimp-gallery-video.css
@@ -10,41 +10,25 @@
  * https://opensource.org/licenses/MIT
  */
 
-.blueimp-gallery > .slides > .slide > .video-content > img {
+.blueimp-gallery > .slides > .slide > .video-content > video,
+.blueimp-gallery > .slides > .slide > .video-content > iframe,
+.blueimp-gallery > .slides > .slide > .video-content > .video-cover {
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
-  /* Prevent artifacts in Mozilla Firefox: */
-  backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-}
-.blueimp-gallery > .slides > .slide > .video-content > video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-}
-.blueimp-gallery > .slides > .slide > .video-content > iframe {
-  position: absolute;
-  top: 100%;
   left: 0;
   width: 100%;
   height: 100%;
   border: none;
 }
-.blueimp-gallery > .slides > .slide > .video-playing > iframe {
-  top: 0;
+.blueimp-gallery > .slides > .slide > .video-content > .video-cover {
+  background: center no-repeat;
+  background-size: contain;
 }
-.blueimp-gallery > .slides > .slide > .video-content > a {
+.blueimp-gallery > .slides > .slide > .video-iframe > .video-cover {
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.blueimp-gallery > .slides > .slide > .video-content > .video-play {
   position: absolute;
   top: 50%;
   right: 0;
@@ -56,37 +40,30 @@
   opacity: 0.8;
   cursor: pointer;
 }
-.blueimp-gallery > .slides > .slide > .video-playing > a,
-.blueimp-gallery > .slides > .slide > .video-playing > img {
+.blueimp-gallery-svgasimg > .slides > .slide > .video-content > .video-play {
+  background-image: url(../img/video-play.svg);
+}
+.blueimp-gallery > .slides > .slide > .video-playing > .video-play,
+.blueimp-gallery > .slides > .slide > .video-playing > .video-cover {
   display: none;
 }
-.blueimp-gallery > .slides > .slide > .video-playing > video {
-  display: block;
-}
-.blueimp-gallery > .slides > .slide > .video-loading > a {
+.blueimp-gallery > .slides > .slide > .video-loading > .video-play {
   background: url(../img/loading.gif) center no-repeat;
   background-size: 64px 64px;
+}
+.blueimp-gallery-smil > .slides > .slide > .video-loading > .video-play {
+  background-image: url(../img/loading.svg);
 }
 
 /* IE7 fixes */
 * + html .blueimp-gallery > .slides > .slide > .video-content {
   height: 100%;
 }
-* + html .blueimp-gallery > .slides > .slide > .video-content > a {
+* + html .blueimp-gallery > .slides > .slide > .video-content > .video-play {
   left: 50%;
   margin-left: -64px;
 }
 
-.blueimp-gallery > .slides > .slide > .video-content > a:hover {
+.blueimp-gallery > .slides > .slide > .video-content > .video-play:hover {
   opacity: 1;
-}
-
-/* Replace PNGs with SVGs for capable browsers (excluding IE<9) */
-body:last-child
-  .blueimp-gallery
-  > .slides
-  > .slide
-  > .video-content:not(.video-loading)
-  > a {
-  background-image: url(../img/video-play.svg);
 }
