--- a/css/scrolling-nav2.css
+++ b/css/scrolling-nav2.css
@@ -508,7 +508,7 @@ min-height: 100%;
     ul.production {}
 
     .affiche-satyre {
-        max-height: 420px;
+/*        max-height: 420px;*/
         display: block;
         margin: 20 auto;
     }
